# notes

./: .gitignore  Makefile  README.md  package.json
.netlify/: state.json
_data/: books.csv  courses.csv  music.csv
_includes/code/algorithms/cses/rust/: Cargo.toml
_includes/code/algorithms/cses/rust/src/: lib.rs  main.rs  template.rs
_includes/code/algorithms/cses/rust/src/book/: mod.rs
_includes/code/algorithms/cses/rust/src/book/programming_techniques/: mod.rs  permutations.rs  subsets.rs  two_queens.rs
_includes/code/algorithms/cses/rust/src/problems/: mod.rs
_includes/code/algorithms/cses/rust/src/problems/dynamic_programming/: dice_combinations.rs  mod.rs
_includes/code/algorithms/cses/rust/src/problems/graphs/: apartments.rs  labyrinth.rs  mod.rs
_includes/code/algorithms/cses/rust/src/problems/introductory/: apple_division.rs  bit_strings.rs  coin_piles.rs  creating_strings.rs  gray_code.rs  grid_paths.rs  increasing_array.rs  missing_number.rs  mod.rs  number_spiral.rs  palindrome_reorder.rs  permutations.rs  repetitions.rs  trailing_zeros.rs  weird_algorithm.rs
_includes/code/algorithms/cses/rust/src/problems/sorting_and_searching/: distinct_numbers.rs  ferris_wheel.rs  maximum_subarray_sum.rs  mod.rs  movie_festival.rs  towers.rs
src/: TODOs.md  Tasks.md  index.md  leadership qs.md
src/.obsidian/: hotkeys.json  (+6 more)
templates/: epilogue.css  main.js  new.css  pandoc.css  prologue.css  site.html  styles.css  tufte.css
toc/: compiling-to-assembly-from-scratch.toc.txt  computer-networks-a-system-approach.toc.txt  crafting-interpreters.toc.txt  (+3 more)
(+7412 files in other folders)
